# multi-ai-coding-agent

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  COMMON.md  GEMINI.md  LICENSE  Makefile  README.md
.githooks/: pre-commit
adk-quickstart/: .gitignore  Makefile  README.md  docker-compose.yml
docs/: 0-Check-List.md  LINK-AUDIT-REPORT.md  SECRET_MANAGEMENT_GUIDELINE.md  agent-comparison.md  ai-adoption-quickstart.md  career-outcomes.md  claude-code-installation-guide.md  coding-agents.md  docker-desktop-installation-guide.md  docker-mcp-toolkit-guide.md  environment-variable.md  glossary-README.md  learning-path.md  setting-up-environment-variables.md  understanding-ai-coding-assistants.md  vscode-installation-guide.md  what-is-an-api-key.md  wsl-setup-guide.md
project-01-content-generator/: .env.example  .gcloudignore  Dockerfile  Makefile  README.md  TROUBLESHOOTING.md  docker-compose.yml  generated_content.md  pyproject.toml  report.md
project-01-content-generator/frontend/: Dockerfile  package.json
project-01-content-generator/frontend/src/: App.css  App.tsx
project-01-content-generator/frontend/src/components/: ContentForm.tsx  LiveConsole.tsx  ProgressStepper.tsx  ReportView.tsx  ResultsDisplay.tsx
project-01-content-generator/src/my_mas/: crew.py  main.py  web_api.py
project-01-content-generator/src/my_mas/config/: agents.yaml  tasks.yaml
project-02-expense-tracker/: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
project-02-expense-tracker/data/: expenses_sample.csv
project-02-expense-tracker/frontend/: Dockerfile  package-lock.json
project-02-expense-tracker/frontend/src/: App.css  App.tsx
project-02-expense-tracker/frontend/src/components/: ExpenseForm.tsx  ExpenseList.tsx  ExpenseSummary.tsx  SampleDataHint.tsx
project-02-expense-tracker/src/expense_tracker/: crew.py  web_api.py
project-02-expense-tracker/src/expense_tracker/config/: agents.yaml  tasks.yaml  video_script_config.yaml
project-02-expense-tracker/src/expense_tracker/examples/: video_script_example.py
project-02-expense-tracker/src/expense_tracker/tools/: __init__.py  csv_handler.py  video_script_generator.py
project-03-project-analyzer/: GCP-PRODUCTION-DEPLOYMENT.md  MAINTENANCE-AND-MOTIVATION-DESIGN.md  PRD-PERSONAL-PRODUCTIVITY.md  PRD.md  SIMPLE-FORM-DESIGN.md  (+2 more)
project-04-Google-OAuth/crew-service/: Dockerfile  pyproject.toml  setup.py
project-04-Google-OAuth/crew-service/src/task_crew/: __init__.py  main.py
project-04-Google-OAuth/crew-service/src/task_crew/agents/: simple_task_agent.py
project-04-Google-OAuth/crew-service/src/task_crew/tools/: __init__.py  google_sheets_tools.py
project-04-Google-OAuth/crew-service/src/task_crew/utils/: privacy.py
(+126 files in other folders)
