[project]
name = "task-crew"
version = "0.1.0"
description = "CrewAI service for intelligent task management with Google Sheets"
authors = [{ name = "MAS Student", email = "student@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic>=2.8,<3.0",
    "gspread>=5.12.0",
    "google-auth>=2.25.0",
    "openai>=1.3.0"
]

[project.scripts]
task-crew = "task_crew.main:cli"
serve = "task_crew.main:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_crew"]

[tool.crewai]
type = "crew"
